--- a/.github/workflows/finalize-notarization.yml
+++ b/.github/workflows/finalize-notarization.yml
@@ -4,6 +4,12 @@ on:
   workflow_run:
     workflows: ["Release Desktop (mac + win)"]
     types: [completed]
+  workflow_dispatch:
+    inputs:
+      run_id:
+        description: "Release Desktop workflow run id (Actions run id)"
+        required: true
+        type: string
 
 permissions:
   contents: write
@@ -11,7 +17,11 @@ permissions:
 
 jobs:
   finalize:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: >
+      ${{
+        (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
+        || github.event_name == 'workflow_dispatch'
+      }}
     runs-on: macos-14
 
     steps:
@@ -19,6 +29,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Resolve source run id
+        id: run
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${{ github.event_name }}" = "workflow_run" ]; then
+            echo "RUN_ID=${{ github.event.workflow_run.id }}" >> $GITHUB_OUTPUT
+            echo "HEAD_SHA=${{ github.event.workflow_run.head_sha }}" >> $GITHUB_OUTPUT
+          else
+            echo "RUN_ID=${{ inputs.run_id }}" >> $GITHUB_OUTPUT
+            echo "HEAD_SHA=" >> $GITHUB_OUTPUT
+          fi
+          echo "Using RUN_ID=$(cat $GITHUB_OUTPUT | grep RUN_ID | cut -d= -f2)"
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -29,12 +53,11 @@ jobs:
         working-directory: rezzy-webpanel
         run: npm ci
 
-      # ✅ Bu, artifact'i DOĞRU run'dan indirir
       - name: Download notarization ids artifact from build run
         uses: actions/download-artifact@v4
         with:
           name: notarization-ids
-          run-id: ${{ github.event.workflow_run.id }}
+          run-id: ${{ steps.run.outputs.RUN_ID }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path: /tmp/notary
 
@@ -43,9 +66,35 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
+          echo "== notary-ids.txt =="
           cat /tmp/notary/notary-ids.txt
           echo "DMG_ID=$(grep -E '^DMG_SUBMISSION_ID=' /tmp/notary/notary-ids.txt | cut -d= -f2)" >> $GITHUB_OUTPUT
           echo "ZIP_ID=$(grep -E '^ZIP_SUBMISSION_ID=' /tmp/notary/notary-ids.txt | cut -d= -f2 || true)" >> $GITHUB_OUTPUT
+
+      - name: Resolve tag for this run
+        id: tag
+        shell: bash
+        run: |
+          set -euo pipefail
+          git fetch --tags --force
+
+          # workflow_run ise head_sha'dan tag bul
+          if [ "${{ github.event_name }}" = "workflow_run" ]; then
+            SHA="${{ steps.run.outputs.HEAD_SHA }}"
+            TAG="$(git tag --points-at "$SHA" | head -n 1 || true)"
+          else
+            # workflow_dispatch'ta SHA gelmeyebilir; en son tag'ı almak yerine kullanıcı tag isteseydik daha iyi olurdu.
+            # Bu yüzden release'i finalize etmeyi opsiyonel hale getireceğiz: TAG yoksa sadece staple yapıp çıkarız.
+            TAG=""
+          fi
+
+          if [ -n "${TAG:-}" ]; then
+            echo "Resolved TAG=$TAG"
+            echo "TAG=$TAG" >> $GITHUB_OUTPUT
+          else
+            echo "No tag resolved (this is OK for manual run if you only want stapling)."
+            echo "TAG=" >> $GITHUB_OUTPUT
+          fi
 
       - name: Import Apple Developer ID Certificate (mac)
         shell: bash
@@ -74,6 +123,7 @@ jobs:
         run: |
           set -euo pipefail
           npx electron-builder --mac dmg zip --publish never
+          ls -la dist || true
 
       - name: Poll until Accepted + Staple + Validate
         shell: bash
@@ -86,6 +136,7 @@ jobs:
           ZIP_ID: ${{ steps.ids.outputs.ZIP_ID }}
         run: |
           set -euo pipefail
+
           if ! command -v jq >/dev/null 2>&1; then
             echo "jq is required but not found."
             exit 1
@@ -135,6 +186,7 @@ jobs:
           ZIP_PATH="$(ls -1 dist/*-mac.zip | head -n 1 || true)"
 
           poll "$DMG_ID" "DMG"
+
           echo "Stapling DMG..."
           xcrun stapler staple -v "$DMG_PATH"
           xcrun stapler validate -v "$DMG_PATH"
@@ -143,13 +195,25 @@ jobs:
             poll "$ZIP_ID" "ZIP"
           fi
 
-      # ✅ Release'e notarized dosyaları tekrar yükler (aynı tag)
-      - name: Upload notarized mac artifacts to GitHub Release
+      - name: Upload notarized mac artifacts to GitHub Release (same tag)
+        if: ${{ steps.tag.outputs.TAG != '' }}
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.event.workflow_run.head_branch }}
+          tag_name: ${{ steps.tag.outputs.TAG }}
           files: |
             rezzy-webpanel/dist/*.dmg
             rezzy-webpanel/dist/*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish draft release
+        if: ${{ steps.tag.outputs.TAG != '' }}
+        shell: bash
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG: ${{ steps.tag.outputs.TAG }}
+        run: |
+          set -euo pipefail
+          # Draft'ı publish et (gh CLI runner'da var)
+          gh release edit "$TAG" --draft=false
+          echo "Release published: $TAG"
