--- a/rezzy-webpanel/package.json
+++ b/rezzy-webpanel/package.json
@@ -6,7 +6,6 @@
   "description": "Rezvix Web Panel Desktop",
   "author": "Umut Ugur",
   "main": "electron/main.cjs",
-
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -24,13 +23,19 @@
     "axios": "^1.7.7",
     "electron-updater": "^6.6.2",
     "exceljs": "^4.4.0",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.6",
     "react-router-dom": "^6.26.2",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@electron/notarize": "^3.1.1",
+    "@types/leaflet": "^1.9.21",
+    "@types/leaflet-draw": "^1.0.13",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^5.0.4",
@@ -47,19 +52,33 @@
     "wait-on": "^9.0.3"
   },
   "build": {
-  "appId": "com.umutugur.rezvix.desktop",
-  "productName": "Rezvix",
-  "files": ["dist/**", "electron/**", "package.json"],
-  "mac": {
-  "target": ["dmg", "zip"],
-  "hardenedRuntime": true,
-  "gatekeeperAssess": false,
-  "entitlements": "electron/entitlements.mac.plist",
-  "entitlementsInherit": "electron/entitlements.mac.inherit.plist"
-},
-  "win": { "target": "nsis" },
-  "publish": [
-    { "provider": "github", "owner": "umutugur", "repo": "rezzy-backend", "releaseType": "release" }
-  ]
-}
+    "appId": "com.umutugur.rezvix.desktop",
+    "productName": "Rezvix",
+    "files": [
+      "dist/**",
+      "electron/**",
+      "package.json"
+    ],
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "entitlements": "electron/entitlements.mac.plist",
+      "entitlementsInherit": "electron/entitlements.mac.inherit.plist"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "umutugur",
+        "repo": "rezzy-backend",
+        "releaseType": "release"
+      }
+    ]
+  }
 }
