--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: write
+  actions: write
 
 jobs:
   build:
@@ -185,3 +186,18 @@ jobs:
             rezzy-webpanel/dist/notary-ids.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Trigger finalize notarization workflow
+        if: runner.os == 'macOS' && startsWith(github.ref, 'refs/tags/')
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const runId = String(context.runId);
+            const tag = String(context.ref).replace("refs/tags/", "");
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: "finalize-notarization.yml",
+              ref: context.ref,
+              inputs: { run_id: runId, tag }
+            });
